# chores

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: tests.yml
BE/: .dockerignore  .gitignore  Dockerfile  MakeFile  Makefile  README.md  main.py  pyproject.toml
BE/app/: config.py  main.py
BE/app/utils/auth/: jwt.py
BE/app/utils/database/: db.py
BE/app/utils/notifications/: resend.py
BE/app/utils/stats/: stats.py
BE/database/: db.py
BE/tests/: conftest.py  test_auth.py  test_ready.py
BE/utils/auth/: jwt.py  password.py
BE/utils/database/: db.py
FE/chores/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
FE/chores/src/: index.css  main.tsx
FE/chores/src/components/: DayCell.tsx  EditPanel.tsx  MergedDayCell.tsx  NavLink.tsx  NavMenu.tsx  Navbar.tsx  ProtectedAdminRoute.tsx  ProtectedRoute.tsx  Snackbar.tsx  Summary.tsx
FE/chores/src/context/: EditContext.ts  SnackbarContext.ts  UserContext.ts
FE/chores/src/pages/: App.tsx  Home.tsx  Login.tsx  Settings.tsx  SignUp.tsx  Stats.tsx
FE/chores/src/types/: user.ts
FE/chores/src/utils/: fetch.ts  timetable.ts  utils.ts
