[project]
name = "chores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.121.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "resend>=2.19.0",
    "ruff>=0.14.4",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
